// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Lsi allowTags UU5.Bricks.Lsi props - allowTags is used in example 1`] = `
<lsi-item
  content="Item: cs, en, sk -> (en) When an unknown language is displayed Environment.defaultLanguage en"
  id="uuID3"
  key="uuID3"
  language="en"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props allowTags=undefined 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props checkGrammar=false 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props checkGrammar=true 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props checkHighlight=false 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props checkHighlight=true 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props checkSpaces=false 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props checkSpaces=true 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props className="my-classname" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props className="test-classname" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props content="This is Content from ContentMixin" 1`] = `
<UU5.Common.TextCorrectorContextConsumer
  key="0"
  language="en-gb"
  text="This is Content from ContentMixin"
/>
`;

exports[`UU5.Bricks.Lsi props content=12345 1`] = `12345`;

exports[`UU5.Bricks.Lsi props controlled=false 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props controlled=true 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props default props 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props disabled=false 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props disabled=false 3`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props disabled=true 1`] = `
<lsi-item
  content="Text in Children"
  disabled={true}
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props disabled=true 3`] = `
<lsi-item
  content="Text in Children"
  disabled={true}
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props dynamic=false 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props dynamic=true 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props fullTextSearchPriority=0 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props hidden=false 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props hidden=false 3`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props hidden=true 1`] = `
<lsi-item
  content="Text in Children"
  hidden={true}
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props hidden=true 3`] = `
<lsi-item
  content="Text in Children"
  hidden={true}
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props id="myId" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props id="test-id" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props ignoreHTML=false 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props ignoreHTML=true 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props language="cs" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props language="de" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props language="en" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props language="en-gb" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props language="en-us" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props language="es" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props language="fr" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props language="ru" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props language="sk" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props language="uk" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props lsi={"en-gb":"value","sk":"hodnota","cs":"hodnota"} 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props mainAttrs=undefined 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props name="myName" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel="bigBox" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBox"
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel="bigBoxCollection" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel="box" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="box"
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel="box" 3`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="box"
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel="boxCollection" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="boxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel="container" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel="inline" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="inline"
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel="inline" 3`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="inline"
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel="page" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel="smallBox" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="smallBox"
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel="smallBoxCollection" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="smallBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel="spa" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props noIndex=false 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props noIndex=true 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props noPrint=false 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props noPrint=true 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props params=["Ahoj","123"] 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props pureRender=false 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props pureRender=true 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props selected=false 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props selected=true 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
  selected={true}
/>
`;

exports[`UU5.Bricks.Lsi props style="padding:8px; borderRadius: 2px" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props style={"backgroundColor":"red","color":"blue"} 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props style={"margin":8} 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props textCorrector=false 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props textCorrector=true 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Lsi props tooltip="My Tooltip" 1`] = `
<lsi-item
  content="Text in Children"
  id="childID"
  key="childID"
  language="cs"
  nestingLevel="bigBoxCollection"
/>
`;
